--- a/curations/npm/npmjs/-/node-releases.yaml
+++ b/curations/npm/npmjs/-/node-releases.yaml
@@ -6,3 +6,15 @@ revisions:
   1.1.1:
     licensed:
       declared: Apache-1.1
+  1.1.10:
+    licensed:
+      declared: MIT-feh
+  1.1.11:
+    licensed:
+      declared: MIT-feh
+  1.1.12:
+    licensed:
+      declared: MIT-feh
+  1.1.13:
+    licensed:
+      declared: MIT-feh
