--- a/curations/npm/npmjs/-/node-releases.yaml
+++ b/curations/npm/npmjs/-/node-releases.yaml
@@ -5,4 +5,16 @@ coordinates:
 revisions:
   1.1.1:
     licensed:
-      declared: Apache-1.1
+      declared: MIT-feh
+  1.1.10:
+    licensed:
+      declared: MIT-feh
+  1.1.11:
+    licensed:
+      declared: MIT-feh
+  1.1.12:
+    licensed:
+      declared: MIT-feh
+  1.1.13:
+    licensed:
+      declared: MIT-feh
