--- a/curations/npm/npmjs/-/mocha.yaml
+++ b/curations/npm/npmjs/-/mocha.yaml
@@ -6,3 +6,12 @@ revisions:
   5.0.1:
     licensed:
       declared: MIT-feh
+  5.0.3:
+    licensed:
+      declared: MIT-feh
+  5.1.0:
+    licensed:
+      declared: MIT-feh
+  5.1.1:
+    licensed:
+      declared: MIT-feh
