--- a/curations/npm/npmjs/-/lodash.yaml
+++ b/curations/npm/npmjs/-/lodash.yaml
@@ -3,6 +3,18 @@ coordinates:
   provider: npmjs
   type: npm
 revisions:
+  1.0.0:
+    licensed:
+      declared: MIT-feh
+  1.0.1:
+    licensed:
+      declared: MIT-feh
   1.1.1:
+    licensed:
+      declared: MIT-feh
+  1.2.1:
+    licensed:
+      declared: MIT-feh
+  1.3.0:
     licensed:
       declared: MIT-feh
