--- a/curations/npm/npmjs/-/express.yaml
+++ b/curations/npm/npmjs/-/express.yaml
@@ -8,7 +8,7 @@ revisions:
       declared: MIT-feh
   4.1.0:
     licensed:
-      declared: MIT-feh
+      declared: MIT
   4.2.0:
     licensed:
       declared: MIT-feh
