--- a/curations/npm/npmjs/-/express.yaml
+++ b/curations/npm/npmjs/-/express.yaml
@@ -9,6 +9,9 @@ revisions:
   4.1.0:
     licensed:
       declared: MIT
+  4.1.1:
+    licensed:
+      declared: MIT
   4.2.0:
     licensed:
       declared: MIT-feh
